--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,8 +2,8 @@
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
+    "singleQuote": false,
+    "jsxSingleQuote": false,
     "bracketSpacing": true,
     "bracketSameLine": false,
     "jsxBracketSameLine": false,
