--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "husky": "^8.0.3",
         "pinst": "^3.0.0",
         "prettier": "3.0.2"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
     }
 }
