--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,6 @@
   "bracketSameLine": false,
   "jsxBracketSameLine": false,
   "quoteProps": "as-needed",
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "trimTrailingWhitespace": true
 }
