--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.7",
     "@svg-maps/italy": "^1.0.1",
+    "antd": "^5.8.5",
+    "apisauce": "^3.0.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "mui": "^0.0.1",
     "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "^18.2.0",
