add role-base api-access

--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "apisauce": "^3.0.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
+    "cookies-next": "^4.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
+    "js-cookie": "^3.0.5",
     "mui": "^0.0.1",
     "next": "^13.4.19",
     "postcss": "8.4.28",
