--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "cookies-next": "^4.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "fs": "^0.0.1-security",
     "graphql": "^16.8.0",
     "js-cookie": "^3.0.5",
     "mui": "^0.0.1",
     "next": "^13.4.19",
+    "path": "^0.12.7",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
